version 0.5.2 (05/21/2005):

05/19/2005 Bob Rossi <bob@brasko.net>

	* io.c (io_data_ready): Oops, here is the correct fix.

05/19/2005 Bob Rossi <bob@brasko.net>

	* io.c (io_data_ready): Modified timeout.tv_usec value.

05/19/2005 Bob Rossi <bob@brasko.net>

	* io.h (io_data_ready): Add new return value in comment.
	* io.c (io_data_ready): Add new return value.

05/19/2005 Bob Rossi <bob@brasko.net>

   * pseudo.c: Changed function name from strlcpy to strlcpy_local.

version 0.5.1 (04/02/2005):

04/02/2005 Bob Rossi <bob@brasko.net>

	* fork_util.c (invoke_debugger): Call exit() if exec failed.

04/01/2005 Bob Rossi <bob@brasko.net>

   * logger.c (logger_set_file): print message when couldn't open file

04/01/2005 Bob Rossi <bob@brasko.net>
   
   * Makefile.in: Regenerated with documented autotools version.

version 0.5.0 (07/14/2004):
version 0.4.2 (05/10/2004):
version 0.4.1 (04/26/2004):

04/06/2004 Bob Rossi <bob@brasko.net>

    * io.h: Added io_getchar.
	* io.c: Implemented io_getchar

01/30/2004 Bob Rossi <bob@brasko.net>

   * fork_util.c: invoke_debugger, honors the choice parameter now.
   
01/29/2004 Bob Rossi <bob@brasko.net>

   * fs_util.h: Changed PATH_MAX to FSUTIL_PATH_MAX and #include <limits.h> to
   #include "fs_util.h"
   * fs_util.c: ditto
   * fork_util.c: ditto

01/08/2004 Bob Rossi <bob@brasko.net>

   * Makefile.in: regenerated with documented autotools version
   * src/Makefile.in: ditto

version 0.4.0-1 cygwin release

12/03/2003 Ronald Landheer-Cieslak <ronald@landheer.com>

   * Makefile.in: re-generated
   * src/Makefile.in: ditto
   * src/Makefile.am: set include path relative to source tree
   
version 0.4.0 (10/28/2003):

10/23/2003 Bob Rossi <bob@brasko.net>

   * error.h: Add err_verbose prototype.
   * error.c: Add err_verbose implementation.
   Add static int to library.

08/27/2003 Bob Rossi <bob@brasko.net>

   * fork_util.c: invoke_debugger, adding --annotate=2 when invoking GDB.

08/16/2003 Bob Rossi <bob@brasko.net>
	